# weavefault

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: weavefault-ci.yml
config/: domains.yaml  standards.yaml
docs/: architecture.md  configuration.md  quickstart.md
scripts/: generate_sample.py  setup_rag.py
src/weavefault/: __init__.py  standards.py
src/weavefault/cli/: __init__.py  main.py
src/weavefault/graph/: __init__.py  builder.py  criticality.py  propagation.py
src/weavefault/ingestion/: __init__.py  diagram_parser.py  file_loader.py  schema.py
src/weavefault/output/: __init__.py  diff_engine.py  excel_exporter.py  fmea_formatter.py  markdown_exporter.py
src/weavefault/reasoning/: __init__.py  fmea_generator.py  rag_retriever.py  reasoning_chain.py  rpn_scorer.py
tests/: __init__.py  conftest.py  test_cli.py  test_criticality.py  test_diagram_parser.py  test_diff_engine.py  test_file_loader.py  test_fmea_generator.py  test_formatters.py  test_graph_builder.py  test_propagation.py  test_rag_retriever.py  test_rpn_scorer.py  test_standards.py
