[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weavefault"
version = "0.1.0"
description = "Diagram-native automated FMEA generator powered by LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "WeaveFault Team", email = "team@weavefault.dev" },
]
keywords = ["fmea", "reliability", "llm", "architecture", "diagrams"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "networkx>=3.3",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/Hexcore2x/weavefault"
Repository = "https://github.com/Hexcore2x/weavefault"
Documentation = "https://github.com/Hexcore2x/weavefault/blob/main/docs/"
"Bug Tracker" = "https://github.com/Hexcore2x/weavefault/issues"

[project.scripts]
weavefault = "weavefault.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
